test/users/vass/compilerAssert/compilerAssert5d.good
compilerAssert5d.chpl:2: error: assert failed - aaaaa
