test/users/vass/compilerAssert/compilerAssert5d.chpl

compilerAssert(false, "a", "a", "a", "a", "a");
